@@ -1,3 +1,9 @@
+2012-01-30 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
+	* tag V01-06-05
+	* Clear documentation panel (right upper panel) when a configuration is closed.
+	* Make prescales table editable in documentation panel. (bug/feature 89524).
+	* Add autosave for prescales enbedded in documentation panel.
+
 2012-01-27 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
 	* tag V01-06-04
 	* Fix EventContent editor in Right Upper Panel. No panels were displayed
